--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
           <h2 class="subtitle">Customers</h2>
           <ul class="list-customers">
             <li class="icons-list">
-              <a class="link-customers-five-section">
+              <a href="" class="link-customers-five-section">
                 <svg width="104" height="56" class="icons-list">
                   <!--icon yago-->
                   <use href="./images/icons.svg#icon-YAGO"></use>
@@ -366,7 +366,7 @@
               </a>
             </li>
             <li class="icons-list">
-              <a class="link-customers-five-section">
+              <a href="" class="link-customers-five-section">
                 <svg width="104" height="56" class="icons-list">
                   <!--company tagline here-->
                   <use href="./images/icons.svg#icon-Logo-1"></use>
@@ -374,7 +374,7 @@
               </a>
             </li>
             <li class="icons-list">
-              <a class="link-customers-five-section">
+              <a href="" class="link-customers-five-section">
                 <svg width="104" height="56" class="icons-list">
                   <use href="./images/icons.svg#icon-COMPANY"></use>
                 </svg>
@@ -382,14 +382,14 @@
             </li>
 
             <li class="icons-list">
-              <a class="link-customers-five-section">
+              <a href="" class="link-customers-five-section">
                 <svg width="104" height="56" class="icons-list">
                   <use href="./images/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-list">
-              <a class="link-customers-five-section">
+              <a href="" class="link-customers-five-section">
                 <svg width="104" height="56" class="icons-list">
                   <use href="./images/icons.svg#icon-BRAND"></use>
                 </svg>
@@ -397,7 +397,7 @@
             </li>
 
             <li class="icons-list">
-              <a class="link-customers-five-section">
+              <a href="" class="link-customers-five-section">
                 <svg width="104" height="56" class="icons-list">
                   <use href="./images/icons.svg#icon-Logo-4"></use>
                 </svg>
