--- a/portfolio.html
+++ b/portfolio.html
@@ -44,45 +44,44 @@
     />
   </head>
   <body>
-    <header class="header">
-      <div class="cls container">
-        <nav class="nav-header">
-          <a href="./index.html" class="logo link"
-            >Web<span class="span-header">Studio</span></a
-          >
+    <!--Main Section-->
+
+    <header class="header-container">
+      <div class="header-section-container">
+        <nav class="navigation-container">
+          <a href="./index.html" class="logo-link link"
+            >Web<span class="logo-info">Studio</span>
+          </a>
           <ul class="list">
-            <li class="item">
-              <a href="./index.html" class="logo-list link">Studio</a>
+            <li>
+              <a class="list-link link" href="./index2.html">Studio</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="logo-list link">Portfolio</a>
+            <li>
+              <a class="list-link link" href="./portfolio.html">Portfolio</a>
             </li>
-
-            <li class="item">
-              <a href="" class="logo-list link">Contacts</a>
+            <li>
+              <a class="list-link link" href="">Contacts</a>
             </li>
           </ul>
+
+          <address class="address-container">
+            <ul class="list">
+              <li>
+                <a href="mailto:info@devstudio.com" class="address-link link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="address-link link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
         </nav>
-        <!--Contact Information-->
-
-        <address>
-          <ul class="list-address">
-            <li class="email-one">
-              <a href="mailto:info@devstudio.com" class="email link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="email-two">
-              <a href="tel:+110001111111" class="email link">
-                +11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
       </div>
     </header>
 
-    <!--Main Section-->
     <main>
       <section class="main-section">
         <div class="container">
@@ -224,28 +223,28 @@
           <ul class="footer-list">
             <li class="listaa">
               <a class="link-footer">
-                <svg width="24" height="24">
+                <svg class="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="listaa">
               <a class="link-footer">
-                <svg width="24" height="24">
+                <svg class="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="listaa">
               <a class="link-footer">
-                <svg width="24" height="24">
+                <svg class="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="listaa">
               <a class="link-footer">
-                <svg width="24" height="24">
+                <svg clas="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
