--- a/portfolio.html
+++ b/portfolio.html
@@ -244,7 +244,7 @@
             </li>
             <li class="listaa">
               <a class="link-footer">
-                <svg clas="last-icons" width="24" height="24">
+                <svg class="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
