--- a/index.html
+++ b/index.html
@@ -46,39 +46,36 @@
   <body>
     <!--Hero Section-->
 
-    <header class="header-container">
-      <div class="header-section-container">
-        <nav class="navigation-container">
-          <a href="./index.html" class="logo-link link"
-            >Web<span class="logo-info">Studio</span>
-          </a>
-          <ul class="list">
+    <header class="header">
+      <!-- Navigation -->
+      <div class="header-div container">
+        <nav class="nav">
+          <a href="./index.html" class="logo-link link">
+            Web<span class="logo-second-word">Studio</span></a
+          >
+          <ul class="list nav-menu">
+            <li><a href="./index.html" class="nav-link link">Studio</a></li>
             <li>
-              <a class="list-link link" href="./index2.html">Studio</a>
+              <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+            </li>
+            <li><a href="" class="nav-link link">Contacts</a></li>
+          </ul>
+        </nav>
+        <!-- Contact-Informations -->
+        <address class="address list">
+          <ul class="list address-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="phone-email link"
+                >info@devstudio.com</a
+              >
             </li>
             <li>
-              <a class="list-link link" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li>
-              <a class="list-link link" href="">Contacts</a>
+              <a href="tel:+110001111111" class="phone-email link"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
-
-          <address class="address-container">
-            <ul class="list">
-              <li>
-                <a href="mailto:info@devstudio.com" class="address-link link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a href="tel:+110001111111" class="address-link link"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </nav>
+        </address>
       </div>
     </header>
 
@@ -194,6 +191,7 @@
               <div class="container-forth">
                 <h3 class="title-second-section">Mark Guerrero</h3>
                 <p class="paragraph-second-section-forth">Product Designer</p>
+
                 <ul class="forth-social-media">
                   <li class="forth-icons">
                     <a href="" class="link-icons">
