--- a/portfolio.html
+++ b/portfolio.html
@@ -3,199 +3,182 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portofolio</title>
 
-    <title>Document</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <!--Main Section-->
-
-    <header class="header-container">
-      <div class="header-section-container">
-        <nav class="navigation-container">
-          <a href="./index.html" class="logo-link link"
-            >Web<span class="logo-info">Studio</span>
-          </a>
-          <ul class="list">
+    <header class="header">
+      <!-- Navigation -->
+      <div class="header-div container">
+        <nav class="nav">
+          <a href="./index.html" class="logo-link link">
+            Web<span class="logo-second-word">Studio</span></a
+          >
+          <ul class="list nav-menu">
+            <li><a href="./index.html" class="nav-link link">Studio</a></li>
             <li>
-              <a class="list-link link" href="./index2.html">Studio</a>
+              <a href="./portfolio.html" class="nav-link link">Portfolio</a>
+            </li>
+            <li><a href="" class="nav-link link">Contacts</a></li>
+          </ul>
+        </nav>
+        <!-- Contact-Informations -->
+        <address class="address list">
+          <ul class="list address-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="phone-email link"
+                >info@devstudio.com</a
+              >
             </li>
             <li>
-              <a class="list-link link" href="./portfolio.html">Portfolio</a>
-            </li>
-            <li>
-              <a class="list-link link" href="">Contacts</a>
+              <a href="tel:+110001111111" class="phone-email link"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
-
-          <address class="address-container">
-            <ul class="list">
-              <li>
-                <a href="mailto:info@devstudio.com" class="address-link link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a href="tel:+110001111111" class="address-link link"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </nav>
+        </address>
       </div>
     </header>
-
     <main>
-      <section class="main-section">
-        <div class="container">
-          <h1 class="visually-hidden"></h1>
-
-          <!--Prima lista din interiorul containerului-->
-          <ul class="list-buttons">
-            <li><button type="button" class="button-link">All</button></li>
-            <li><button type="button" class="button-link">Web Site</button></li>
-            <li><button type="button" class="button-link">App</button></li>
-            <li><button type="button" class="button-link">Design</button></li>
+      <!-- Filter-Section -->
+      <section class="filter-section">
+        <div class="portfolio-section-div container">
+          <h1 class="visually-hidden">nu poate fi gol</h1>
+          <ul class="list buttons-list">
             <li>
-              <button type="button" class="button-link">Marketing</button>
+              <button type="button" class="button">All</button>
+            </li>
+            <li>
+              <button type="button" class="button">Web Site</button>
+            </li>
+            <li>
+              <button type="button" class="button">App</button>
+            </li>
+            <li>
+              <button type="button" class="button">Design</button>
+            </li>
+            <li>
+              <button type="button" class="button">Marketing</button>
             </li>
           </ul>
-
-          <!--A doua lista din interiorul containerului-->
-
-          <ul class="list-two-main">
-            <li class="two-list">
-              <a href="#" class="link one">
-                <img src="./images/banking-1.jpg" alt="banking" width="360" />
-                <div class="container-item">
-                  <h2 class="title-main-section">
-                    Banking App Interface Concept
-                  </h2>
-                  <p class="paragraph-main-section">App</p>
-                </div>
-              </a>
-            </li>
-            <li class="two-list">
-              <a href="#" class="link one">
-                <img src="./images/payment-2.jpg" alt="banking" width="360" />
-
-                <div class="container-item">
-                  <h2 class="title-main-section">Cashless Payment</h2>
-                  <p class="paragraph-main-section">Marketing</p>
-                </div>
-              </a>
-            </li>
-
-            <li class="two-list">
-              <a href="#" class="link one">
+          <ul class="list portfolio-list">
+            <li class="portfolio-list-list">
+              <a href="" class="link portfolio-link">
                 <img
-                  src="./images/meditation-3.jpg"
-                  alt="banking"
+                  src="./images/banking-1.jpg"
+                  alt="bank aplication"
                   width="360"
                 />
-
-                <div class="container-item">
-                  <h2 class="title-main-section">Meditation App</h2>
-                  <p class="paragraph-main-section">App</p>
+                <div class="portfolio-link-div">
+                  <h2 class="projects-name">Banking App Interface Concept</h2>
+                  <p class="projects-description">App</p>
                 </div>
               </a>
             </li>
-
-            <li class="two-list">
-              <a href="#" class="link one">
-                <img src="./images/taxi-4.jpg" alt="banking" width="360" />
-                <div class="container-item">
-                  <h2 class="title-main-section">Taxi Service</h2>
-                  <p class="paragraph-main-section">Marketing</p>
+            <li class="portfolio-list-list">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/payment-2.jpg"
+                  alt="phone aplication"
+                  width="360"
+                />
+                <div class="portfolio-link-div">
+                  <h2 class="projects-name">Cashless Payment</h2>
+                  <p class="projects-description">Marketing</p>
                 </div>
               </a>
             </li>
-
-            <li class="two-list">
-              <a href="#" class="link one">
-                <img src="./images/screen-5.jpg" alt="banking" width="360" />
-
-                <div class="container-item">
-                  <h2 class="title-main-section">Screen Illustrations</h2>
-                  <p class="paragraph-main-section">Design</p>
+            <li class="portfolio-list-list">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/meditation-3.jpg"
+                  alt="computer aplication"
+                  width="360"
+                />
+                <div class="portfolio-link-div">
+                  <h2 class="projects-name">Meditation App</h2>
+                  <p class="projects-description">App</p>
                 </div>
               </a>
             </li>
-
-            <li class="two-list">
-              <a href="#" class="link one">
-                <img src="./images/online-6.jpg" alt="banking" width="360" />
-                <div class="container-item">
-                  <h2 class="title-main-section">Online Courses</h2>
-                  <p class="paragraph-main-section">Marketing</p>
+            <li class="portfolio-list-list">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/taxi-4.jpg"
+                  alt="inide the car"
+                  width="360"
+                />
+                <div class="portfolio-link-div">
+                  <h2 class="projects-name">Taxi Service</h2>
+                  <p class="projects-description">Marketing</p>
                 </div>
               </a>
             </li>
-
-            <li class="two-list">
-              <a href="#" class="link one">
-                <img src="./images/stories-7.jpg" alt="banking" width="360" />
-
-                <div class="container-item">
-                  <h2 class="title-main-section">Instagram Stories Concept</h2>
-                  <p class="paragraph-main-section">Design</p>
+            <li class="portfolio-list-list">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/screen-5.jpg"
+                  alt="phone interface"
+                  width="360"
+                />
+                <div class="portfolio-link-div">
+                  <h2 class="projects-name">Screen Illustrations</h2>
+                  <p class="projects-description">Design</p>
                 </div>
               </a>
             </li>
-
-            <li class="two-list">
-              <a href="#" class="link one">
-                <img src="./images/food-8.jpg" alt="banking" width="360" />
-                <div class="container-item">
-                  <h2 class="title-main-section">Organic Food</h2>
-                  <p class="paragraph-main-section">Web Site</p>
+            <li class="portfolio-list-list">
+              <a href="" class="link portfolio-link">
+                <img src="./images/online-5.jpg" alt="persoana" width="360" />
+                <div class="portfolio-link-div">
+                  <h2 class="projects-name">Online Courses</h2>
+                  <p class="projects-description">Marketing</p>
                 </div>
               </a>
             </li>
-
-            <li class="two-list">
-              <a href="#" class="link one">
-                <img src="./images/coffee-9.jpg" alt="banking" width="360" />
-                <div class="container-item">
-                  <h2 class="title-main-section">Fresh Coffee</h2>
-                  <p class="paragraph-main-section">Web Site</p>
+            <li class="portfolio-list-list">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/stories-7.jpg"
+                  alt="aplication interface"
+                  width="360"
+                />
+                <div class="portfolio-link-div">
+                  <h2 class="projects-name">Instagram Stories Concept</h2>
+                  <p class="projects-description">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-list-list">
+              <a href="" class="link portfolio-link">
+                <img src="./images/food-3.jpg" alt="groceries" width="360" />
+                <div class="portfolio-link-div">
+                  <h2 class="projects-name">Organic Food</h2>
+                  <p class="projects-description">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-list-list">
+              <a href="" class="link portfolio-link">
+                <img src="./images/coffee-2.jpg" alt="coffe" width="360" />
+                <div class="portfolio-link-div">
+                  <h2 class="projects-name">Fresh Coffee</h2>
+                  <p class="projects-description">Web Site</p>
                 </div>
               </a>
             </li>
@@ -203,55 +186,53 @@
         </div>
       </section>
     </main>
-
-    <!--Footer section-->
-
-    <footer class="footer-class">
-      <div class="container-footer">
-        <div class="logo-and-paragraph">
-          <a href="./index.html" class="logo-footer"
-            >Web<span class="span-footer">Studio</span></a
-          >
-          <p class="logo-footer-link">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-
-        <div class="footer-socials">
-          <p class="p-social-media">Social media</p>
-          <ul class="footer-list">
-            <li class="listaa">
-              <a class="link-footer">
-                <svg class="last-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="listaa">
-              <a class="link-footer">
-                <svg class="last-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="listaa">
-              <a class="link-footer">
-                <svg class="last-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="listaa">
-              <a class="link-footer">
-                <svg class="last-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </footer>
   </body>
+
+  <footer class="footer-class">
+    <div class="container-footer">
+      <div class="logo-and-paragraph">
+        <a href="./index.html" class="logo-footer"
+          >Web<span class="span-footer">Studio</span></a
+        >
+        <p class="logo-footer-link">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+
+      <div class="footer-socials">
+        <p class="p-social-media">Social media</p>
+        <ul class="footer-list">
+          <li class="listaa">
+            <a class="link-footer">
+              <svg class="last-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="listaa">
+            <a class="link-footer">
+              <svg class="last-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="listaa">
+            <a class="link-footer">
+              <svg class="last-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="listaa">
+            <a class="link-footer">
+              <svg class="last-icons" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </html>
