--- a/index.html
+++ b/index.html
@@ -423,28 +423,28 @@
           <p class="p-social-media">Social media</p>
           <ul class="footer-list">
             <li class="listaa">
-              <a class="link-footer">
+              <a href="" class="link-footer">
                 <svg class="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="listaa">
-              <a class="link-footer">
+              <a href="" class="link-footer">
                 <svg class="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="listaa">
-              <a class="link-footer">
+              <a href="" class="link-footer">
                 <svg class="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="listaa">
-              <a class="link-footer">
+              <a href="" class="link-footer">
                 <svg class="last-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
