--- a/index.html
+++ b/index.html
@@ -408,6 +408,8 @@
     <!--Footer Section-->
 
     <footer class="footer-class">
+
+      <!--Logo Footer-->
       <div class="container-footer">
         <div class="logo-and-paragraph">
           <a href="./index.html" class="logo-footer"
