--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           <ul class="list-customers">
             <li class="icons-list">
               <a href="" class="link-customers-five-section">
-                <svg width="104" height="56" class="icons-list">
+                <svg width="104" height="56" class="icons-list-svg">
                   <!--icon yago-->
                   <use href="./images/icons.svg#icon-YAGO"></use>
                 </svg>
@@ -364,7 +364,7 @@
             </li>
             <li class="icons-list">
               <a href="" class="link-customers-five-section">
-                <svg width="104" height="56" class="icons-list">
+                <svg width="104" height="56" class="icons-list-svg">
                   <!--company tagline here-->
                   <use href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
@@ -372,7 +372,7 @@
             </li>
             <li class="icons-list">
               <a href="" class="link-customers-five-section">
-                <svg width="104" height="56" class="icons-list">
+                <svg width="104" height="56" class="icons-list-svg">
                   <use href="./images/icons.svg#icon-COMPANY"></use>
                 </svg>
               </a>
@@ -380,14 +380,14 @@
 
             <li class="icons-list">
               <a href="" class="link-customers-five-section">
-                <svg width="104" height="56" class="icons-list">
+                <svg width="104" height="56" class="icons-list-svg">
                   <use href="./images/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="icons-list">
               <a href="" class="link-customers-five-section">
-                <svg width="104" height="56" class="icons-list">
+                <svg width="104" height="56" class="icons-list-svg">
                   <use href="./images/icons.svg#icon-BRAND"></use>
                 </svg>
               </a>
@@ -395,7 +395,7 @@
 
             <li class="icons-list">
               <a href="" class="link-customers-five-section">
-                <svg width="104" height="56" class="icons-list">
+                <svg width="104" height="56" class="icons-list-svg">
                   <use href="./images/icons.svg#icon-Logo-4"></use>
                 </svg>
               </a>
